koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
/* ... */
#opac-main-search {
    select {
        max-width: 12em;
        width: auto;
    }
}

#logo {
    background: transparent url( "../images/koha-green-logo.png" ) no-repeat scroll 0%;
    border: 0;
    float: left !important;
    margin: 0;
    padding: 0;
    width: 100px;

    a {
        border: 0;
        cursor: pointer;
        display: block;
        height: 0 !important;
        margin: 0;
        overflow: hidden;
        padding: 40px 0 0;
        text-decoration: none;
        width: 100px;
         &:focus {
        background-color: transparent;
         }
    }
}

#user-menu-trigger {
    display: none;

    i {
        padding: 14px 0 0;
        width: 14px;
    }

    .caret {
        border-bottom-color: #999999;
        border-top-color: #999999;
        margin-top: 18px;
    }
}

#header-region .icon-white {
    background-image: url(/opac-tmpl/bootstrap/lib/bootstrap/img/glyphicons-halflings.png);
}

/* Class to be added to toolbar when it starts being fixed at the top of the screen*/
.floating {
    box-shadow: 0 3px 2px 0 rgba( 0, 0, 0, .4 );
    margin-top: 0;
    z-index: 5;
}

.tdlabel {
    display: none;
    font-weight: bold;
}

#ulactioncontainer {
    min-width: 16em;
}

.notesrow {
    label {
        font-weight: bold;
    }

    span {
        display: block;
    }
}

.thumbnail-shelfbrowser span {
    margin: 0 auto;
}

.table {
    .sorting_asc {
        background: url( "../images/asc.gif" ) no-repeat scroll 100% 80% #E2E8E8;
        padding-right: 19px;
    }

    .sorting_desc {
        background: url( "../images/desc.gif" ) no-repeat scroll 100% 80% #E2E8E8;
        padding-right: 19px;
    }

    .sorting {
        background: url( "../images/ascdesc.gif" ) no-repeat scroll 100% 75% #E2E8E8;
        padding-right: 19px;
    }

    .nosort,
    .nosort.sorting_asc,
    .nosort.sorting_desc,
    .nosort.sorting {
        background: #E2E8E8 none;
        padding-right: 19px;
    }

    th,
    td {
        line-height: 135%;
    }
}

.table-bordered {
    border-radius: 0;
    thead:first-child tr:first-child > th {
        &:last-child {
        border-radius: 0;
        }
        &:first-child {
        border-radius: 0;
        }
    }
    tbody:last-child tr:last-child > td {
        &:last-child {
        border-radius: 0;
        }
        &:first-child {
        border-radius: 0;
        }
    }
}

.tags,
.shelves {
    ul {
        display: inline;
        list-style: none;
        margin-left: 0;

        li {
            display: inline;
        }
    }
}

.coverimages {
    float: right;
}

#termsList {
    label {
        display: inline;
        vertical-align: middle;
    }

    ul {
        border-bottom: 1px solid #EEE;
        list-style-type: none;
        margin: 0;
        padding: .6em 0;
    }

    li {
        list-style-type: none;
        margin: 0;
        padding: 0;
    }
}


#overdrive-results,
#recordedbooks-results,
#openlibrary-results {
    font-weight: bold;
    padding-left: 1em;
}

.throbber {
    vertical-align: middle;
}

#overdrive-results-list .star-rating-control {
    display: block;
    overflow: auto;
}

#shelfbrowser {
    table {
        margin: 0;
    }

    table,
    td,
    th {
        border: 0;
        font-size: 90%;
        text-align: center;
    }

    td,
    th {
        padding: 3px 5px;
        width: 20%;

        &.nav-cell {
            padding: 0;
            vertical-align: middle;
            width: 1em;
        }
    }

    a {
        display: block;
        font-size: 110%;
        font-weight: bold;
        text-decoration: none;

        &.shelfbrowser_cover {
            min-height: 80px;
            min-width: 80px;
            display: inline-block;
        }
    }

    #browser_previous {
        a {
            transform: rotate(-90deg);
            white-space: nowrap;

            i {
                padding: 0 .5em;
            }
        }
    }

    #browser_next {
        a {
            transform: rotate(90deg);
            white-space: nowrap;

            i {
                padding: 0 .5em;
            }
        }
    }
}

#holds {
    margin: 0 auto;
    max-width: 800px;
}

.holdrow {
    border-bottom: 1px solid #CCC;
    clear: both;
    margin-bottom: .5em;
    padding: 0 1em 1em 1em;

    fieldset {
        border: 0;
        float: none;
        margin: 0;

        .label {
            font-size: 14px;
        }
    }

    label {
        display: inline;
    }
}

.hold-options {
    clear: both;
}

.toggle-hold-options {
    background-color: #EEE;
    clear: both;
    display: block;
    font-weight: bold;
    margin: 1em 0;
    padding: .5em;
}

.copiesrow {
    clear: both;
}

#idreambooksreadometer {
    float: right;
}

.idreambookslegend {
    font-size: small;
}

.idreambookssummary {
    a {
        color: #707070;
        text-decoration: none;
    }

    img {
        vertical-align: middle;
    }
}

.idbresult {
    color: #29ADE4;
    margin: .5em;
    padding: .5em;
    text-align: center;

    img {
        padding-right: 6px;
        vertical-align: middle;
    }

    a,
    a:visited {
        text-decoration: none;
        color: #29ADE4;
    }
}

.js-show {
    display: none;
}

.modal-nojs {
    .modal-header,
    .modal-footer {
        display: none;
    }
}

.contents {
    width: 75%;

    .t:first-child::before {
        content: "→ ";
    }

    .t::before {
        content: "\A → ";
        white-space: pre;
    }

    .t {
        font-weight: bold;
        display: inline;
    }

    .r {
        display: inline;
    }
}


.contentblock {
    font-size: 95%;
    line-height: 135%;
    margin-left: 2em;
    position: relative;
}

.m880 {
    display: block;
    float: right;
    padding-left: 20px;
    text-align: right;
    width: 50%;
}
/* ... */

